<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/second">
    <TextView
        android:id="@+id/cim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bej"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/jelszo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:textColorHint="@color/black"
        android:hint="@string/jel"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/bejelentkezo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bej"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jelszo"
        app:layout_constraintVertical_bias="0.147"
        android:onClick="bejelentkezes"
        android:backgroundTint="@color/first"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/regisztralo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/first"
        android:onClick="regisztracio"
        android:text="@string/reg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bejelentkezo"
        app:layout_constraintVertical_bias="0.034" />


</androidx.constraintlayout.widget.ConstraintLayout>